# LearningCpp

./: .gitignore  LICENSE  README.md
1.3 learncpp/: 1.3 learncpp.cpp  1.3 learncpp.h  CMakeLists.txt
1.4/: 1.4.cpp  1.4.h  CMakeLists.txt  part2_unusedVar.cpp
CMakeProject1/: CMakePresets.json
CMakeProject1/CMakeProject1/: CMakeLists.txt  main.cpp
input_seperated_by_space_1.5/: CMakeLists.txt  input_seperated_by_space_1.5.h  main.cpp
introduction-to-iostream-cout-cin-and-endl--1.5/: CMakeLists.txt  introduction-to-iostream-cout-cin-and-endl--1.5.h  main.cpp
statements-and-the-structure-of-a-program--1.1/: CMakeLists.txt  main.cpp  statements-and-the-structure-of-a-program--1.1.h
std_cin_input_introduction-to-iostream-cout-cin-and-endl/: CMakeLists.txt  main.cpp  std_cin_input_introduction-to-iostream-cout-cin-and-endl.h
what-language-standard-is-my-compiler-using/: CMakeLists.txt  what-language-standard-is-my-compiler-using.cpp  what-language-standard-is-my-compiler-using.h
